--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "API project for freeCodeCamp",
   "main": "index.js",
   "scripts": {
+    "test": "jest ./index.test.js --verbose",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
@@ -17,6 +18,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "jest": "^26.6.3",
     "nodemon": "^2.0.4"
   }
 }
